bindings/C/src/geometry.h


BRST_EXPORT(BRST_STATUS)
BRST_Page_GSave(
   BRST_Page page
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_GRestore(
   BRST_Page page
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_Concat(
   BRST_Page page,
   BRST_REAL a,
   BRST_REAL b,
   BRST_REAL c,
   BRST_REAL d,
   BRST_REAL x,
   BRST_REAL y
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_Translate(
   BRST_Page page,
   BRST_REAL dx,
   BRST_REAL dy
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_Scale(
   BRST_Page page,
   BRST_REAL sx,
   BRST_REAL sy
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_RotateDeg(
   BRST_Page page,
   BRST_REAL degrees
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_Rotate(
   BRST_Page page,
   BRST_REAL radians
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_Skew(
   BRST_Page page,
   BRST_REAL a,
   BRST_REAL b
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_Circle(
   BRST_Page page,
   BRST_REAL x,
   BRST_REAL y,
   BRST_REAL radius
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_Ellipse(
   BRST_Page page,
   BRST_REAL x,
   BRST_REAL y,
   BRST_REAL a,
   BRST_REAL b
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_Arc(
   BRST_Page page,
   BRST_REAL x,
   BRST_REAL y,
   BRST_REAL radius,
   BRST_REAL angle1,
   BRST_REAL angle2
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_SetGrayFill(
   BRST_Page page,
   BRST_REAL value
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_SetGrayStroke(
   BRST_Page page,
   BRST_REAL value
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_SetRGBFill(
   BRST_Page page,
   BRST_REAL r,
   BRST_REAL g,
   BRST_REAL b
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_SetRGBFillUint(
   BRST_Page page,
   BRST_UINT8 r,
   BRST_UINT8 g,
   BRST_UINT8 b
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_SetRGBFillHex(
   BRST_Page page,
   BRST_UINT32 rgb
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_SetRGBStroke(
   BRST_Page page,
   BRST_REAL r,
   BRST_REAL g,
   BRST_REAL b
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_SetRGBStrokeUint(
   BRST_Page page,
   BRST_UINT8 r,
   BRST_UINT8 g,
   BRST_UINT8 b
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_SetRGBStrokeHex(
   BRST_Page page,
   BRST_UINT32 rgb
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_SetCMYKFill(
   BRST_Page page,
   BRST_REAL c,
   BRST_REAL m,
   BRST_REAL y,
   BRST_REAL k
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_SetCMYKStroke(
   BRST_Page page,
   BRST_REAL c,
   BRST_REAL m,
   BRST_REAL y,
   BRST_REAL k
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_Clip(
   BRST_Page page
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_Eoclip(
   BRST_Page page
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_Stroke(
   BRST_Page page
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_ClosePathStroke(
   BRST_Page page
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_Fill(
   BRST_Page page
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_Eofill(
   BRST_Page page
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_FillStroke(
   BRST_Page page
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_EofillStroke(
   BRST_Page page
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_ClosePathFillStroke(
   BRST_Page page
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_ClosePathEofillStroke(
   BRST_Page page
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_EndPath(
   BRST_Page page
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_MoveTo(
   BRST_Page page,
   BRST_REAL x,
   BRST_REAL y
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_LineTo(
   BRST_Page page,
   BRST_REAL x,
   BRST_REAL y
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_CurveTo(
   BRST_Page page,
   BRST_REAL x1,
   BRST_REAL y1,
   BRST_REAL x2,
   BRST_REAL y2,
   BRST_REAL x3,
   BRST_REAL y3
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_CurveTo2(
   BRST_Page page,
   BRST_REAL x2,
   BRST_REAL y2,
   BRST_REAL x3,
   BRST_REAL y3
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_CurveTo3(
   BRST_Page page,
   BRST_REAL x1,
   BRST_REAL y1,
   BRST_REAL x3,
   BRST_REAL y3
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_ClosePath(
   BRST_Page page
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_Rectangle(
   BRST_Page page,
   BRST_REAL x,
   BRST_REAL y,
   BRST_REAL width,
   BRST_REAL height
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_SetLineWidth(
   BRST_Page page,
   BRST_REAL line_width
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_SetLineCap(
   BRST_Page page,
   BRST_LineCap line_cap
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_SetLineJoin(
   BRST_Page page,
   BRST_LineJoin line_join
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_SetMiterLimit(
   BRST_Page page,
   BRST_REAL miter_limit
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_SetDash(
   BRST_Page page,
   BRST_DASH_PATTERN dash_pattern,
   BRST_UINT num_elem,
   BRST_REAL phase
);
BRST_EXPORT(BRST_STATUS)
BRST_Page_SetFlat(
   BRST_Page page,
   BRST_REAL flatness
);
BRST_EXPORT(BRST_REAL)
BRST_Page_GrayFill(
   BRST_Page page
);
BRST_EXPORT(BRST_REAL)
BRST_Page_GrayStroke(
   BRST_Page page
);
BRST_EXPORT(BRST_ColorSpace)
BRST_Page_StrokeColorSpace(
   BRST_Page page
);
BRST_EXPORT(BRST_ColorSpace)
BRST_Page_FillColorSpace(
   BRST_Page page
);
BRST_EXPORT(BRST_REAL)
BRST_Page_LineWidth(
   BRST_Page page
);
BRST_EXPORT(BRST_LineCap)
BRST_Page_LineCap(
   BRST_Page page
);
BRST_EXPORT(BRST_LineJoin)
BRST_Page_LineJoin(
   BRST_Page page
);
BRST_EXPORT(BRST_REAL)
BRST_Page_MiterLimit(
   BRST_Page page
);
BRST_EXPORT(BRST_REAL)
BRST_Page_Flat(
   BRST_Page page
);